# paper-finder

./: .gitignore  README.md  README.zh-CN.md  SKILL.md  config.example.json  cronjob_prompt.local.txt  cronjob_prompt.pages.txt  manual-journal-digest-2026-05-04.html  manual-journal-digest-2026-05-12.html  prepare_deploy.sh  pyproject.toml
.github/workflows/: pages.yml
.hermes/plans/: 2026-04-27_003000-paper-finder-refactor.md
assets/: journal_list.json  working_paper_sources.json
automation/prompts/: candidate-review.prompt.txt  profile-refresh.prompt.txt  task.prompt.txt
references/: contracts.md  cronjob_prompt.md  distribution.md  onboarding.md  profile-map-generation.md  setup-routing.md  workflow.md  zotero-feedback.md  zotero-mcp.md
reports/schema/: candidate-card.schema.json  zotero-feedback.schema.json
reports/viewer/: papers_data.json
scripts/: build_profile_from_zotero.py  get_journal_ids.py  manual_journal_digest.py  publish_viewer.sh  sync_zotero_to_chroma.py
scripts/core/: run_codex_task.sh
scripts/distribution/: build_skill_package.py  install_skill.sh
scripts/profile/: refresh_profile.sh
src/codex_research_assist/: __init__.py  client.py  digest_summary.py  email_sender.py  html_fmt.py  llm_scorer.py  openclaw_runner.py  pipeline.py  profile_contract.py  profile_refresh_output.py  ranker.py  review_digest.py  telegram_fmt.py
src/codex_research_assist/arxiv_profile_pipeline/: client.py  pipeline.py  profile_contract.py
temp/semantic-test/: USAGE.md  semantic-config.example.json
tests/: test_distribution.py  test_zotero_support.py
viewer/: app.js  index.html  papers_data.json  styles.css
(+15 files in other folders)
