[project]
name = "research-assist"
version = "0.1.0"
description = "Lightweight arXiv literature digest skill for OpenClaw"
requires-python = ">=3.12"
dependencies = [
  "feedparser>=6.0.11",
  "requests>=2.32.3",
]

[project.scripts]
research-assist = "codex_research_assist.openclaw_runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_research_assist"]
